--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render "users/shared/error_messages", resource: @profile %>
 
 <div class="row justify-content-center">
-  <div class="col users-form">
+  <div class="col profile-form">
     <h2><%= t('.title') %></h2>
     <%= form_with model: @profile, url: update_profile_path, html: { method: 'put' }  do |f| %>
       <div class="field">
