--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@ form {
   .form-check input[type="checkbox"] {
     @extend .form-check-label;
   }
+
+  > div {
+    @extend .mb-3;
+  }
 }
 
 /* shared */
@@ -69,6 +73,10 @@ form {
       }
     }
   }
+}
+
+.journal-form {
+  @extend .py-2;
 }
 
 /* home */
@@ -135,12 +143,8 @@ form {
       background-color: $gray-300;
       border-radius: 10px;
 
-      .journal-form-section {
-        background-color: $blue-100;
-      }
-
       .journal-list-section {
-        background-color: $gray-100;
+        border-top: 1px solid $gray-500;
       }
     }
   }
@@ -155,10 +159,6 @@ form {
 
   h2 {
     text-align: center;
-  }
-
-  > form > div {
-    @extend .mb-3;
   }
 }
 
