--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
-// @import "bootstrap-sprockets";
+@import "variables";
 @import "bootstrap";
 
 /* universal */
@@ -148,6 +148,9 @@ form {
         @extend .mt-2;
         @extend .ps-md-0, .ps-3;
 
+        p {
+          @extend .mb-1;
+        }
       }
     }
   }
@@ -175,7 +178,7 @@ form {
 }
 
 .devise-form, .profile-form {
-  @extend .col-xxl-6, .col-xl-7, .col-lg-8, .col-md-9;
+  @extend .col-lg-8, .col-md-9;
   @extend .mx-3;
   @extend .px-4, .py-3;
   background-color: $gray-500;
