--- a/app/views/journals/_journal.html.erb
+++ b/app/views/journals/_journal.html.erb
@@ -8,7 +8,7 @@
   <div class="journal-content">
     <div class="journal-header">
       <div class="journal-display-name">
-        <span><%= profile.display_name %></span>
+        <span><%= link_to profile.display_name, user_path(profile.user), data: { turbo_frame: '_top' } %></span>
       </div>
       <div class="journal-time-ago">
         <%= time_ago_in_words journal.created_at %>
