--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,43 +1,45 @@
 <%= render "users/shared/error_messages", resource: @profile %>
 
-<div class="row justify-content-center">
-  <div class="col profile-form">
-    <h2><%= t('.title') %></h2>
-    <%= form_with model: @profile, url: update_profile_path, html: { method: 'put' }  do |f| %>
-      <div class="field">
-        <%= f.label :display_name %>
-        <%= f.text_field :display_name, autofocus: true, autocomplete: 'display_name' %>
-      </div>
+<div class="row-devise-main-frame">
+  <div class="col-devise-content-pane">
+    <div class="profile-form">
+      <h2><%= t('.title') %></h2>
+      <%= form_with model: @profile, url: update_profile_path, html: { method: 'put' }  do |f| %>
+        <div class="field">
+          <%= f.label :display_name %>
+          <%= f.text_field :display_name, autofocus: true, autocomplete: 'display_name' %>
+        </div>
 
-      <div class="select">
-        <%= f.label :prefecture %>
-        <%= f.select :prefecture, Profile.enum_options_for_select(:prefecture) %>
-      </div>
+        <div class="select">
+          <%= f.label :prefecture %>
+          <%= f.select :prefecture, Profile.enum_options_for_select(:prefecture) %>
+        </div>
 
-      <div class="field">
-        <%= f.label :description %>
-        <%= f.text_field :description, autocomplete: 'description' %>
-      </div>
+        <div class="field">
+          <%= f.label :description %>
+          <%= f.text_field :description, autocomplete: 'description' %>
+        </div>
 
-      <div class="field">
-        <%= f.label :x_username %>
-        <%= f.text_field :x_username, autocomplete: 'x_username' %>
-      </div>
+        <div class="field">
+          <%= f.label :x_username %>
+          <%= f.text_field :x_username, autocomplete: 'x_username' %>
+        </div>
 
-      <div class="field">
-        <%= f.label :ig_username %>
-        <%= f.text_field :ig_username, autocomplete: 'ig_username' %>
-      </div>
+        <div class="field">
+          <%= f.label :ig_username %>
+          <%= f.text_field :ig_username, autocomplete: 'ig_username' %>
+        </div>
 
-      <div class="field">
-        <%= f.label :avatar %>
-        <%= f.file_field :avatar %>
-      </div>
+        <div class="field">
+          <%= f.label :avatar %>
+          <%= f.file_field :avatar %>
+        </div>
 
-      <div class="actions">
-        <%= f.submit t('.update') %>
-      </div>
-    <% end %>
-    <%= link_to t('.back'), @profile.user %>
+        <div class="actions">
+          <%= f.submit t('.update') %>
+        </div>
+      <% end %>
+      <%= link_to t('.back'), @profile.user %>
+    </div>
   </div>
 </div>
