--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,43 +1,45 @@
 <%= render "users/shared/error_messages" , resource: resource %>
 
-<div class="row justify-content-center">
-  <div class="col devise-form">
-    <h2>
-      <%= t('.sign_up') %>
-    </h2>
+<div class="row-devise-main-frame">
+  <div class="col-devise-content-pane">
+    <div class="devise-form">
+      <h2>
+        <%= t('.sign_up') %>
+      </h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-        <div class="field">
-          <%= f.label :username %><br />
-            <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
-        </div>
+          <div class="field">
+            <%= f.label :username %><br />
+              <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :email %><br />
-            <%= f.email_field :email, autocomplete: "email" %>
-        </div>
+          <div class="field">
+            <%= f.label :email %><br />
+              <%= f.email_field :email, autocomplete: "email" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :password %>
-            <% if @minimum_password_length %>
-              <em>
-                <%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %>
-              </em>
-              <% end %><br />
-                <%= f.password_field :password, autocomplete: "new-password" %>
-        </div>
+          <div class="field">
+            <%= f.label :password %>
+              <% if @minimum_password_length %>
+                <em>
+                  <%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %>
+                </em>
+                <% end %><br />
+                  <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
+          <div class="field">
+            <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
 
-        <div class="actions">
-          <%= f.submit t('.sign_up') %>
-        </div>
-        <% end %>
+          <div class="actions">
+            <%= f.submit t('.sign_up') %>
+          </div>
+          <% end %>
 
-    <%= render "users/shared/links" %>
+      <%= render "users/shared/links" %>
+    </div>
   </div>
 </div>
