--- a/app/views/users/unlocks/new.html.erb
+++ b/app/views/users/unlocks/new.html.erb
@@ -1,22 +1,24 @@
 <%= render "users/shared/error_messages", resource: resource %>
 
-<div class="row justify-content-center">
-  <div class="col devise-form">
-    <h2><%= t('.resend_unlock_instructions') %></h2>
+<div class="row-devise-main-frame">
+  <div class="col-devise-content-pane">
+    <div class="devise-form">
+      <h2><%= t('.resend_unlock_instructions') %></h2>
 
-    <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+      <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
 
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
 
-      <div class="actions">
-        <%= f.submit t('.resend_unlock_instructions') %>
-      </div>
-    <% end %>
+        <div class="actions">
+          <%= f.submit t('.resend_unlock_instructions') %>
+        </div>
+      <% end %>
 
-    <%= render "users/shared/links" %>
+      <%= render "users/shared/links" %>
+    </div>
   </div>
 </div>
 
