--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -53,13 +53,15 @@
 
   <div class="col-content-pane">
     <div class="pickle-section">
-      <h2>
-        <%= t('.users_pickles', name: profile.display_name) %>
-      </h2>
-      <% if @user.id == current_user&.id %>
-        <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary',
-            data: {turbo_frame: '_top' } %>
-      <% end %>
+      <div class="title">
+        <h2>
+          <%= t('.users_pickles', name: profile.display_name) %>
+        </h2>
+        <% if @user.id == current_user&.id %>
+          <%= link_to t('pickles.shared.links.create_pickle'), new_pickle_path, class: 'btn btn-primary',
+              data: {turbo_frame: '_top' } %>
+        <% end %>
+      </div>
       <%= turbo_frame_tag 'pickles-list' do %>
         <% @pickles.each do |pickle| %>
           <%= render 'pickles/pickle_card', pickle: pickle %>
