--- a/app/views/pickles/new.html.erb
+++ b/app/views/pickles/new.html.erb
@@ -1,3 +1,7 @@
 <%= render 'users/shared/error_messages', resource: @pickle %>
 
-<%= render 'pickle_form', pickle: @pickle, title: t('.create_pickle') %>
+<div class="row-pickle-form-main-frame">
+  <div class="col-pickle-form-pane">
+    <%= render 'pickle_form', pickle: @pickle, title: t('.create_pickle') %>
+  </div>
+</div>
