--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-md bg-body-tertiary mb-3">
+  <nav class="navbar navbar-expand-md bg-body-tertiary">
     <div class="container">
       <%= link_to "ococo" , root_path, class: 'navbar-brand' %>
       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
