Add avatar validation

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -32,7 +32,7 @@
 
         <div class="field">
           <%= f.label :avatar %>
-          <%= f.file_field :avatar %>
+          <%= f.file_field :avatar, accept: 'image/jpeg,image/gif,image/png' %>
         </div>
 
         <div class="actions">
