--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@ form {
   input[type="password"],
   input[type="email"],
   input[type="file"],
+  input[type="date"],
   textarea {
     @extend .form-control;
   }
