--- a/app/views/pickles/index.html.erb
+++ b/app/views/pickles/index.html.erb
@@ -1,5 +1,5 @@
 <h2>漬け物一覧</h2>
-<%= turbo_frame_tag 'pickles-list' do %>
+<%= turbo_frame_tag 'pickle-list' do %>
   <% @pickles.each do |pickle| %>
     <div>
       <h3>
