--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,11 +62,18 @@
               data: {turbo_frame: '_top' } %>
         <% end %>
       </div>
-      <%= turbo_frame_tag 'pickles-list' do %>
-        <% @pickles.each do |pickle| %>
-          <%= render 'pickles/pickle_card', pickle: pickle %>
+
+      <% if @pickles.empty? %>
+        <div class="no-pickles-yet" id="no-pickles-yet">
+          <%= t('pickles.shared.no_pickles_yet') %>
+        </div>
+      <% else %>
+        <%= turbo_frame_tag 'pickles-list' do %>
+          <% @pickles.each do |pickle| %>
+            <%= render 'pickles/pickle_card', pickle: pickle %>
+          <% end %>
+          <%= paginate @pickles %>
         <% end %>
-        <%= paginate @pickles %>
       <% end %>
     </div>
 
