--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -358,7 +358,7 @@ ul.pagination {
 .pickle-form {
   background-color: $gray-500;
   border-radius: 10px;
-  @extend .mb-3;
+  @extend .my-3;
   @extend .p-3;
 
   h2 {
