--- a/app/views/pickles/new.html.erb
+++ b/app/views/pickles/new.html.erb
@@ -2,6 +2,6 @@
 
 <div class="row-pickle-form-main-frame">
   <div class="col-pickle-form-pane">
-    <%= render 'pickle_form', pickle: @pickle, title: t('.create_pickle') %>
+    <%= render 'form', pickle: @pickle, title: t('.create_pickle') %>
   </div>
 </div>
