--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
       <% else %>
         <%= turbo_frame_tag 'pickles-list' do %>
           <% @pickles.each do |pickle| %>
-            <%= render 'pickles/pickle_card', pickle: pickle %>
+            <%= render 'pickles/pickle', pickle: pickle %>
           <% end %>
           <%= paginate @pickles %>
         <% end %>
